website/i18n/zh-hant/docusaurus-plugin-content-docs/version-2.x/seo.mdx
---
description: How to make your Docusaurus site maximally search-engine-friendly.
sidebar_label: SEO
keywords:
  - seo
  - positioning
---

# Search engine optimization (SEO)

import BrowserWindow from '@site/src/components/BrowserWindow';

Docusaurus supports search engine optimization in a variety of ways.

## Global metadata {#global-metadata}

Provide global meta attributes for the entire site through the [site configuration](./configuration.mdx#site-metadata). The metadata will all be rendered in the HTML `<head>` using the key-value pairs as the prop name and value.

```js title="docusaurus.config.js"
module.exports = {
  themeConfig: {
    metadata: [{name: 'keywords', content: 'cooking, blog'}],
    // This would become <meta name="keywords" content="cooking, blog"/> in the generated HTML
  },
};
```

Docusaurus adds some metadata out-of-the-box. For example, if you have configured [i18n](./i18n/i18n-introduction.mdx), you will get a [`hreflang`](https://developers.google.com/search/docs/advanced/crawling/localized-versions) alternate link.

To read more about types of meta tags, visit [the MDN docs](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta).

## Single page metadata {#single-page-metadata}

Similar to [global metadata](#global-metadata), Docusaurus also allows for the addition of meta-information to individual pages. Follow [this guide](./guides/markdown-features/markdown-features-head-metadata.mdx) for configuring the `<head>` tag. In short:

```md title="my-markdown-page.md"
# A cooking guide

<head>
  <meta name="keywords" content="cooking, blog"/>
</head>

Some content...
```

Docusaurus automatically adds `description`, `title`, canonical URL links, and other useful metadata to each Markdown page. They are configurable through front matter:

```md
---
title: Title for search engines; can be different from the actual heading
description: A short description of this page
image: a thumbnail image to be shown in social media cards
keywords: [keywords, describing, the main topics]
---
```

When creating your React page, adding these fields in `Layout` would also improve SEO.

:::tip

Prefer to use front matter for fields like `description` and `keywords`: Docusaurus will automatically apply this to both `description` and `og:description`, while you would have to manually declare two metadata tags when using the `<head>` tag.

:::

For JSX pages, you can use the Docusaurus [`<Head>`](docusaurus-core.mdx#head) component.

```jsx title="my-react-page.jsx"
import React from 'react';
import Layout from '@theme/Layout';
import Head from '@docusaurus/Head';

export default function page() {
  return (
    <Layout title="Page" description="A React page demo">
      <Head>
        <meta property="og:image" content="image.png" />
      </Head>
      {/* ... */}
    </Layout>
  );
}
```

:::tip

For convenience, the default theme `<Layout>` component accept `title` and `description` as props.

:::

## Static HTML generation {#static-html-generation}

Docusaurus is a static site generator—HTML files are statically generated for every URL route, which helps search engines discover your content more easily.

## Image meta description {#image-meta-description}

The alt tag for an image tells the search engine what the image is about, and is used when the image can't be visually seen, e.g. when using a screen reader, or when the image is broken. Alt tags are commonly supported in Markdown.

You may also add a title for your image—this doesn't impact SEO much but is displayed as a tooltip when hovering above the image, usually used to provide hints.

```md
![Docusaurus banner](./assets/docusaurus-asset-example-banner.png 'Image title')
```

<BrowserWindow>

![Docusaurus banner](./assets/docusaurus-asset-example-banner.png 'Image title')

</BrowserWindow>

## Rich search information {#rich-search-information}

Docusaurus blogs support [rich search results](https://search.google.com/test/rich-results) out-of-the-box to get maximum search engine experience. The information is created depending on your meta information in blog/global configuration. In order to get the benefits of the rich search information, fill in the information about the post's publish date, authors, and image, etc. Read more about the meta-information [here](./blog.mdx).

## Robots file {#robots-file}

A `robots.txt` file regulates search engines' behavior about which should be displayed and which shouldn't. You can provide it as [static asset](./static-assets.mdx). The following would allow access to all sub-pages from all requests:

```text title="static/robots.txt"
User-agent: *
Disallow:
```

詳閱 [Google 文件](https://developers.google.com/search/docs/advanced/robots/intro)以了解更多關於 robots 檔案的資訊。

:::warning

**重要**：`robots.txt` 檔案**無法**阻止 HTML 頁面被索引。

若要防止整個 Docusaurus 網站被索引，請使用 [`noIndex`](./api/docusaurus.config.js.mdx#noIndex) 網站配置。某些[託管服務提供商](./deployment.mdx)可能也允許您配置 `X-Robots-Tag: noindex` HTTP 標頭（GitHub Pages 不支援此功能）。

若要防止單一頁面被索引，請使用 `<meta name="robots" content="noindex">` 作為[頁面元數據](#single-page-metadata)。詳閱[robots 元標籤](https://developers.google.com/search/docs/advanced/robots/robots_meta_tag)以了解更多資訊。

:::

## 網站地圖檔案 {#sitemap-file}

Docusaurus 提供預設隨 `preset-classic` 內建的 [`@docusaurus/plugin-sitemap`](./api/plugins/plugin-sitemap.mdx) 外掛程式。它會自動生成 `sitemap.xml` 檔案，在生產環境建置後可透過 `https://example.com/[baseUrl]/sitemap.xml` 存取。此網站地圖元數據有助於搜尋引擎爬蟲更準確地爬取您的網站。

:::tip

網站地圖外掛程式會自動過濾包含 `noindex` [robots 元指令](https://developers.google.com/search/docs/advanced/robots/robots_meta_tag)的頁面。

例如，[`/examples/noIndex`](/examples/noIndex) 並未包含在[Docusaurus 的 sitemap.xml 檔案](pathname:///sitemap.xml)中，因為它包含以下[頁面元數據](#single-page-metadata)：

```html
<head>
  <meta name="robots" content="noindex, nofollow" />
</head>
```

:::

## 人類可讀連結 {#human-readable-links}

Docusaurus 使用您的檔案名稱作為連結，但您始終可以使用 slugs 來更改，詳見此[教學](./guides/docs/docs-create-doc.mdx#document-id)以了解更多細節。

## 結構化內容 {#structured-content}

搜尋引擎依賴 HTML 標記（如 `<h2>`、`<table>` 等）來理解您的網頁結構。當 Docusaurus 渲染您的頁面時，會使用語義標記（如 `<aside>`、`<nav>`、`<main>`）來劃分頁面的不同部分，幫助搜尋引擎定位側邊欄、導航欄和主要頁面內容等區域。

大多數 [CommonMark](https://spec.commonmark.org/0.30/#atx-headings) 語法都有對應的 HTML 標籤。透過在專案中一致地使用 Markdown，您將使搜尋引擎更容易理解您的頁面內容。