website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.0.1/seo.mdx
---
description: How to make your Docusaurus site maximally search-engine-friendly.
sidebar_label: SEO
keywords:
  - seo
  - positioning
---

# Search engine optimization (SEO)

import BrowserWindow from '@site/src/components/BrowserWindow';

Docusaurus supports search engine optimization in a variety of ways.

## Global metadata {#global-metadata}

Provide global meta attributes for the entire site through the [site configuration](./configuration.mdx#site-metadata). The metadata will all be rendered in the HTML `<head>` using the key-value pairs as the prop name and value. The `metadata` attribute is a convenient shortcut to declare `<meta>` tags, but it is also possible to inject arbitrary tags in `<head>` with the `headTags` attribute.

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // Declare some <meta> tags
    metadata: [
      {name: 'keywords', content: 'cooking, blog'},
      {name: 'twitter:card', content: 'summary_large_image'},
    ],
  },
  headTags: [
    // Declare a <link> preconnect tag
    {
      tagName: 'link',
      attributes: {
        rel: 'preconnect',
        href: 'https://example.com',
      },
    },
    // Declare some json-ld structured data
    {
      tagName: 'script',
      attributes: {
        type: 'application/ld+json',
      },
      innerHTML: JSON.stringify({
        '@context': 'https://schema.org/',
        '@type': 'Organization',
        name: 'Meta Open Source',
        url: 'https://opensource.fb.com/',
        logo: 'https://opensource.fb.com/img/logos/Meta-Open-Source.svg',
      }),
    },
  ],
};
```

Docusaurus adds some metadata out-of-the-box. For example, if you have configured [i18n](./i18n/i18n-introduction.mdx), you will get a [`hreflang`](https://developers.google.com/search/docs/advanced/crawling/localized-versions) alternate link.

To read more about types of meta tags, visit [the MDN docs](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta).

## Single page metadata {#single-page-metadata}

Similar to [global metadata](#global-metadata), Docusaurus also allows for the addition of meta-information to individual pages. Follow [this guide](./guides/markdown-features/markdown-features-head-metadata.mdx) for configuring the `<head>` tag. In short:

```md title="my-markdown-page.md"
# A cooking guide

<head>
  <meta name="keywords" content="cooking, blog" />
  <meta name="twitter:card" content="summary_large_image" />
  <link rel="preconnect" href="https://example.com" />
  <script type="application/ld+json">
    {JSON.stringify({
      '@context': 'https://schema.org/',
      '@type': 'Organization',
      name: 'Meta Open Source',
      url: 'https://opensource.fb.com/',
      logo: 'https://opensource.fb.com/img/logos/Meta-Open-Source.svg',
    })}
  </script>
</head>

Some content...
```

Docusaurus automatically adds `description`, `title`, canonical URL links, and other useful metadata to each Markdown page. They are configurable through [front matter](./guides/markdown-features/markdown-features-intro.mdx#front-matter):

```md
---
title: Title for search engines; can be different from the actual heading
description: A short description of this page
image: a thumbnail image to be shown in social media cards
keywords: [keywords, describing, the main topics]
---
```

When creating your React page, adding these fields in `Layout` would also improve SEO.

:::tip

Prefer to use [front matter](./guides/markdown-features/markdown-features-intro.mdx#front-matter) for fields like `description` and `keywords`: Docusaurus will automatically apply this to both `description` and `og:description`, while you would have to manually declare two metadata tags when using the `<head>` tag.

:::

:::info

The official plugins all support the following [front matter](./guides/markdown-features/markdown-features-intro.mdx#front-matter): `title`, `description`, `keywords` and `image`. Refer to their respective API documentation for additional [front matter](./guides/markdown-features/markdown-features-intro.mdx#front-matter) support:

- [Docs front matter](./api/plugins/plugin-content-docs.mdx#markdown-front-matter)
- [Blog front matter](./api/plugins/plugin-content-blog.mdx#markdown-front-matter)
- [Pages front matter](./api/plugins/plugin-content-pages.mdx#markdown-front-matter)

:::

For JSX pages, you can use the Docusaurus [`<Head>`](docusaurus-core.mdx#head) component.

```jsx title="my-react-page.jsx"
import React from 'react';
import Layout from '@theme/Layout';
import Head from '@docusaurus/Head';

export default function page() {
  return (
    <Layout title="Page" description="A React page demo">
      <Head>
        <meta property="og:image" content="image.png" />
        <meta name="twitter:card" content="summary_large_image" />
        <link rel="preconnect" href="https://example.com" />
        <script type="application/ld+json">
          {JSON.stringify({
            '@context': 'https://schema.org/',
            '@type': 'Organization',
            name: 'Meta Open Source',
            url: 'https://opensource.fb.com/',
            logo: 'https://opensource.fb.com/img/logos/Meta-Open-Source.svg',
          })}
        </script>
      </Head>
      {/* ... */}
    </Layout>
  );
}
```

:::tip

For convenience, the default theme `<Layout>` component accept `title` and `description` as props.

:::

## Static HTML generation {#static-html-generation}

Docusaurus is a static site generator—HTML files are statically generated for every URL route, which helps search engines discover your content more easily.

## Image meta description {#image-meta-description}

The alt tag for an image tells the search engine what the image is about, and is used when the image can't be visually seen, e.g. when using a screen reader, or when the image is broken. Alt tags are commonly supported in Markdown.

You may also add a title for your image—this doesn't impact SEO much but is displayed as a tooltip when hovering above the image, usually used to provide hints.

```md
![Docusaurus banner](./assets/docusaurus-asset-example-banner.png 'Image title')
```

<BrowserWindow>

![Docusaurus banner](./assets/docusaurus-asset-example-banner.png 'Image title')

</BrowserWindow>

## 豐富搜尋資訊 {#rich-search-information}

Docusaurus 部落格預設支援[豐富搜尋結果](https://search.google.com/test/rich-results)，以獲得最佳搜尋引擎體驗。這些資訊會根據您在部落格/全域設定中的元數據自動生成。要充分利用豐富搜尋資訊的優勢，請填寫文章發布日期、作者、圖片等相關資訊。更多關於元數據的說明請參閱[此文件](./blog.mdx)。

## Robots 檔案 {#robots-file}

`robots.txt` 檔案用於規範搜尋引擎的行為，決定哪些內容應被顯示或排除。您可以將其作為[靜態資源](./static-assets.mdx)提供。以下設定允許所有請求存取所有子頁面：

```text title="static/robots.txt"
User-agent: *
Disallow:
```

更多關於 robots 檔案的說明請參閱[Google 官方文件](https://developers.google.com/search/docs/advanced/robots/intro)。

:::warning

**重要**：`robots.txt` 檔案**無法**阻止 HTML 頁面被索引。

若要阻止整個 Docusaurus 網站被索引，請使用 [`noIndex`](./api/docusaurus.config.js.mdx#noIndex) 站點設定。某些[託管服務提供商](./deployment.mdx)可能允許您配置 `X-Robots-Tag: noindex` HTTP 標頭（GitHub Pages 不支援此功能）。

若要阻止單一頁面被索引，請使用 `<meta name="robots" content="noindex">` 作為[頁面元數據](#single-page-metadata)。更多關於 [robots 元標籤](https://developers.google.com/search/docs/advanced/robots/robots_meta_tag)的說明。

:::

## 網站地圖檔案 {#sitemap-file}

Docusaurus 提供預設內建於 `preset-classic` 的 [`@docusaurus/plugin-sitemap`](./api/plugins/plugin-sitemap.mdx) 外掛程式，會在建置生產版本時自動生成 `sitemap.xml` 檔案，該檔案可透過 `https://example.com/[baseUrl]/sitemap.xml` 存取。此網站地圖元數據有助於搜尋引擎爬蟲更準確地抓取您的網站。

:::tip

網站地圖外掛程式會自動過濾包含 `noindex` [robots 元指令](https://developers.google.com/search/docs/advanced/robots/robots_meta_tag)的頁面。

例如，[`/examples/noIndex`](/examples/noIndex) 未被包含在 [Docusaurus 的 sitemap.xml 檔案](pathname:///sitemap.xml)中，因為它包含以下[頁面元數據](#single-page-metadata)：

```html
<head>
  <meta name="robots" content="noindex, nofollow" />
</head>
```

:::

## 人類可讀連結 {#human-readable-links}

Docusaurus 使用檔案名稱作為連結，但您隨時可以透過 slug 進行修改，詳見此[教學文件](./guides/docs/docs-create-doc.mdx#document-id)。

## 結構化內容 {#structured-content}

搜尋引擎依賴 `<h2>`、`<table>` 等 HTML 標記來理解網頁結構。當 Docusaurus 渲染頁面時，會使用 `<aside>`、`<nav>`、`<main>` 等語義標記劃分頁面不同區塊，幫助搜尋引擎定位側邊欄、導航列和主要內容等部分。

大多數 [CommonMark](https://spec.commonmark.org/0.30/#atx-headings) 語法都有對應的 HTML 標籤。透過在專案中一致地使用 Markdown，您將使搜尋引擎更容易理解頁面內容。